fix desktop header overlapping content

--- a/styles/boilerplate.less
+++ b/styles/boilerplate.less
@@ -25,7 +25,7 @@ body {
 
 .layout {
   overflow-x: hidden;
-  padding: 50px 20px 20px 20px;
+  padding: 80px 20px 10px 20px;
 }
 
 a {
@@ -381,5 +381,11 @@ button:focus, input[type="button"]:focus {
     border: 5px solid transparent;
     border-image: @gradient-rainbow;
     border-image-slice: 1;
+  }
+}
+
+@media (min-width: @desktop_min_width) {
+  .layout {
+    padding-top: 108px;
   }
 }
